# FiniteVarietiesDatabase

./: .gitignore  Manifest.toml  Project.toml  README.md  flake.nix  iterator.jl  planar_curve_isoclasses.jl  projective_equivalence_classes.jl  pyproject.toml
data/hypersurfaces/: README.md  is_smooth.jl
data/hypersurfaces/f2/: db_concatenation.jl  dim1deg2.jl  dim1deg3.jl  dim1deg4.jl  dim1deg5.jl  dim1deg6.jl  dim1deg7.jl  dim2deg2.jl  dim2deg3.jl  dim2deg4.jl  dim2deg5.jl  dim3deg2.jl  dim3deg3.jl  dim3deg4.jl  dim4deg2.jl  dim4deg3.jl  dim4deg4.jl
data/hypersurfaces/f3/: dim1deg2.jl  dim1deg3.jl  dim1deg4.jl  dim1deg5.jl  dim2deg2.jl  dim2deg3.jl  dim2deg4.jl  dim3deg2.jl  dim3deg3.jl
data/hypersurfaces/f5/: dim1deg2.jl  dim1deg3.jl  dim1deg4.jl  dim2deg2.jl  dim2deg3.jl  dim2deg4.jl  dim3deg2.jl  dim3deg3.jl
hypersurfaces/: projective_equivalence_classes.jl
misc/: iterators.jl
src/: FiniteVarietiesDB.jl
src/hypersurfaces/: README.md  equiv_classes_filtration_method.jl  orbit_size.jl  projective_equivalence_classes.jl
src/hypersurfaces/mprocs/: equiv_classes_filtration_method.jl  equiv_classes_filtration_method2.jl
src/hypersurfaces/mthreads/: equiv_classes_filtration_method.jl  orbit_size.jl  projective_equivalence_classes.jl
src/misc/: chain_maker.jl
tui/: fvdb.py
